# 42-pyton_module_03

./: .gitignore  justfile  pyproject.toml
docs/: evalnotes.md
src/ex0/: ft_command_quest.py
src/ex1/: ft_score_analytics.py
src/ex2/: ft_coordinate_system.py
src/ex3/: ft_achievement_tracker.py
src/ex4/: ft_inventory_system.py
src/ex5/: ft_data_stream.py
src/ex6/: ft_data_alchemist.py
