[project]
name = "python_module_03"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "mypy",
    "ruff",
    "flake8>=7.3.0",
]

[tool.ruff]
line-length = 79
src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
files = ["src"]
